syntax = "proto3";

option java_package = "io.trewartha.positional.settings";
option java_outer_classname = "CompassNorthVibrationProto";

enum CompassNorthVibration {
  COMPASS_NORTH_VIBRATION_UNSPECIFIED = 0;
  COMPASS_NORTH_VIBRATION_NONE = 1;
  COMPASS_NORTH_VIBRATION_SHORT = 2;
  COMPASS_NORTH_VIBRATION_MEDIUM = 3;
  COMPASS_NORTH_VIBRATION_LONG = 4;
}
