syntax = "proto3";

option java_package = "io.trewartha.positional.settings";
option java_outer_classname = "CoordinatesFormatProto";

enum CoordinatesFormat {
  COORDINATES_FORMAT_UNSPECIFIED = 0;
  COORDINATES_FORMAT_DEGREES_DECIMAL_MINUTES = 1;
  COORDINATES_FORMAT_DEGREES_MINUTES_SECONDS = 2;
  COORDINATES_FORMAT_MGRS = 3;
  COORDINATES_FORMAT_UTM = 4;
  COORDINATES_FORMAT_DECIMAL_DEGREES = 5;
}
