syntax = "proto3";

import "compass_mode.proto";
import "compass_north_vibration.proto";
import "coordinates_format.proto";
import "location_accuracy_visibility.proto";
import "theme.proto";
import "units.proto";

option java_package = "io.trewartha.positional.settings";
option java_outer_classname = "SettingsProto";

message Settings {
  CompassMode compass_mode = 1;
  CompassNorthVibration compass_north_vibration = 6;
  CoordinatesFormat coordinates_format = 2;
  LocationAccuracyVisibility location_accuracy_visibility = 3;
  Theme theme = 4 ;
  Units units = 5;
}
